<resources>
    <string name="app_name">MyChatApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="log_out">Log Out</string>
    <string name="already_have_account">Already have Account?</string>
    <string name="need_a_new_account">Need A New Account?</string>
    <string name="welcome_to_mychat">Welcome To MyChat</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_image">CHANGE IMAGE</string>
    <string name="default_status">Hi there! I am using MyChapApp</string>
    <string name="save_changes">Save Changes</string>
</resources>
